Fix the "wave" animation not being visible
- Technically the bug is still here, but it now only applies to :focus-visible (not :hover)

--- a/src/components/NoteList.css
+++ b/src/components/NoteList.css
@@ -23,7 +23,7 @@
 }
 
 /* This is needed becuase the focusable element !== the one we apply the wave effect to */
-.note-list a:is(:focus-visible, :hover) .wave::after {
+.note-list a:focus-visible .wave::after {
   background-size: 15000%;
   opacity: 1;
   transition: var(--speed2) background-size linear;
